[tool.poetry]
name = "sysaudit"
version = "0.2.0"
description = "Backport module for sys.audit and sys.addaudithook from Python 3.8"
authors = ["brettlangdon <me@brett.is>"]
license = "MIT"
build = "build.py"
repository = "https://github.com/brettlangdon/sysaudit"
homepage = "https://github.com/brettlangdon/sysaudit"
readme = "README.md"

[tool.poetry.dependencies]
python = "~2.7 || ~=3.5"

[tool.poetry.dev-dependencies]
Cython = "^0.29.21"
black = {version = "^20.8b1", python = "~=3.6"}
pytest = {version = "~=4.6"}
mock = "~=3.0"
mypy = {version = "^0.800", python = "~=3.5"}

[build-system]
requires = ["poetry-core>=1.0.0", "Cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
